turned the new/edit form into a modal overlay. will need to tweak the height of an empty timesheet to prevent the overlay being cut off

--- a/css/popup.css
+++ b/css/popup.css
@@ -128,13 +128,32 @@ a#new-entry-link {
 	float: left;
 }
 
-#entry-form {
+#form-overlay {
 	display: none;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	background: rgba(0, 0, 0, 0.55);
+}
+
+#entry-form {
 	font-size: 12px;
+	-webkit-border-radius: 8px;
+	background: #fff;
+	width: 280px;
+	margin: 0 auto;
+	padding: 0 5px 10px 10px;
 }
 
 #entry-form h2 {
 	font-size: 20px;
+	padding-top: 5px;
+}
+
+#entry-form a.cancel {
+	/* TODO: Display block, background image of an X */
 }
 
 #entry-form label {
@@ -144,12 +163,15 @@ a#new-entry-link {
 	font-size: 14px;
 }
 
+#entry-form select {
+	width: 205px;
+}
+
 #entry-form input[type='text'], #entry-form textarea {
-	padding: 4px;
 	border: 1px solid #e5e5e5;
 	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	color: #4d4d4d;
-	width: 253px;
+	width: 200px;
 	-webkit-box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 8px;
 	background: -webkit-gradient(
 		linear,
@@ -168,11 +190,15 @@ a#new-entry-link {
 }
 
 #entry-form input[type='text'] {
-	font-size: 20px;
+	font-size: 14px;
 	font-weight: bold;
 }
 
 #entry-form textarea {
-	font-size: 14px;
+	font-size: 12px;
 	height: 60px;
+}
+
+#harvest-link {
+	font-size: 0.8em;
 }
